@@ -76,7 +76,8 @@ Error: This pattern matches values of type int t
 #             Characters 87-88:
     let f = function A -> 1 | B -> 2
                               ^
-Error: The variant type a has no constructor B
+Error: This variant pattern is expected to have type a
+       The constructor B does not belong to type a
 #   type _ t = Int : int t
 #   val ky : 'a -> 'a -> 'a = <fun>
 #       val test : 'a t -> 'a = <fun>
