@@ -129,7 +129,8 @@ module OK :
 #               Characters 111-112:
     let b : bar = {x=3; y=4}
                         ^
-Error: The record type bar has no field y
+Error: This record expression is expected to have type bar
+       The field y does not belong to type bar
 #   module M : sig type foo = { x : int; y : int; } end
 # module N : sig type bar = { x : int; y : int; } end
 # Characters 19-22:
@@ -174,7 +175,8 @@ Warning 42: this use of x required disambiguation.
 Characters 72-73:
     let f r = ignore (r: foo); {r with x = 2; z = 3}
                                               ^
-Error: The record type M.foo has no field z
+Error: This record expression is expected to have type M.foo
+       The field z does not belong to type M.foo
 #       module M :
   sig
     type foo = M.foo = { x : int; y : int; }
@@ -188,7 +190,8 @@ Warning 42: this use of x required disambiguation.
 Characters 73-74:
     let f r = ignore (r: foo); { r with x = 3; a = 4 }
                                                ^
-Error: The record type M.foo has no field a
+Error: This record expression is expected to have type M.foo
+       The field a does not belong to type M.foo
 #         Characters 39-40:
     let r = {x=1; y=2}
              ^
@@ -200,7 +203,8 @@ Warning 42: this use of y required disambiguation.
 Characters 67-68:
     let r: other = {x=1; y=2}
                     ^
-Error: The record type M.other has no field x
+Error: This record expression is expected to have type M.other
+       The field x does not belong to type M.other
 #     module A : sig type t = { x : int; } end
 module B : sig type t = { x : int; } end
 # Characters 20-23:
@@ -211,7 +215,8 @@ Error: The field A.x belongs to the record type A.t
 #             Characters 88-91:
     let a : t = {x=1;yyz=2}
                      ^^^
-Error: The record type t has no field yyz
+Error: This record expression is expected to have type t
+       The field yyz does not belong to type t
 Did you mean yyy?
 #             type t = A
 type s = A
